--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-dnd": "^11.1.3",
         "react-dnd-html5-backend": "^11.1.3",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.8.0",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.0",
         "typescript": "^4.5.5",
