--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-icons": "^4.8.0",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.0",
+        "swiper": "^9.2.2",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4"
     },
