--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-typescript-starter",
-    "homepage": "https://talhamahmood1992.github.io/final-project-starter",
+    "homepage": "https://talhamahmood1992.github.io/Team16",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
