--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     },
     "plugins": ["react", "@typescript-eslint", "prettier"],
     "rules": {
+        "@typescript-eslint/no-explicit-any": ["off"],
         "prettier/prettier": [
             "error",
             {
